- AI profile option for default SacCost AI preference.